<resources>
    <string name="app_name">World News</string>
    <string name="pick_a_country">Pick a country</string>
    <string name="pick_categories">Pick some categories</string>

    <string name="welcome">Welcome!</string>
    <string name="already_registered">Are you already registered?</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="password_forgotten">Did you forget your password?</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="or">OR</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="science">Science</string>
    <string name="general">General</string>
    <string name="entertainment">Entertainment</string>
    <string name="business">Business</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Confirm</string>

    <string name="countries_france">France</string>
    <string name="countries_italy">Italy</string>
    <string name="countries_germany">Germany</string>
    <string name="countries_spain">Spain</string>
    <string name="countries_unitedkingdom">United Kingdom</string>

    <string name="category_business">Business</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_general">General</string>
    <string name="category_health">Health</string>
    <string name="category_science">Science</string>
    <string name="category_sports">Sports</string>
    <string name="category_technology">Technology</string>


    <!-- Errors -->
    <string name="error_email_login">Check the email address</string>
    <string name="error_password_login">The password must have at least 8 characters</string>
    <string name="error_retrieving_news">There was an error retrieving the news</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_collision_user">This email is already registered</string>
    <string name="error_unexpected">Unexpected error</string>


    <string name="preferences">For me</string>
    <string name="popular">Popular</string>
    <string name="search">Search</string>
    <string name="favorite">Favorites</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="signup">Signup</string>
    <string name="delete_from_favorites">Delete from favorites</string>
    <string name="share">Share</string>
    <string name="error_retireving_articles">There was an error in retrieving the articles</string>


</resources>