<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/login_main"
        app:tint="?android:attr/textColorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/welcome"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/already_registered"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        style="?attr/textInputOutlinedStyle"
        android:background="#05000000"
        app:startIconDrawable="@drawable/baseline_alternate_email_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"/>



    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        style="?attr/textInputOutlinedStyle"
        android:background="#05000000"
        app:startIconDrawable="@drawable/baseline_password_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"/>



    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:gravity="top|start"
        android:text="@string/password_forgotten"
        />

    <Button
        android:id="@+id/loginButton"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_gravity="center"
        />

    <RelativeLayout
        android:layout_marginTop="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp">

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_toStartOf="@id/text_or"
            android:layout_marginEnd="@dimen/margin"
            android:layout_centerInParent="true"
            android:background="#555"/>

        <TextView
            android:id="@+id/text_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/or" />

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_toEndOf="@id/text_or"
            android:layout_centerInParent="true"
            android:background="#555"/>


    </RelativeLayout>

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_google"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_gravity="center"
        app:icon="@drawable/google_icon"
        app:iconGravity="textStart"
        app:iconTint="@null"
        />

</LinearLayout>